# ComfyUI-Wildcard-Pipeline

./: .comfyignore  .coverage  .gitattributes  .gitignore  .releaserc.js  AGENTS.md  CHANGELOG.md  CHECKPOINT-cascade-edit.md  CHECKPOINT-importer-exporter.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.updated.md  __init__.py  conftest.py  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.mts  vitest.config.ts
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bundle-size-pr.yml  ci.yml  publish.yml  release.yml
.husky/: commit-msg  pre-commit
api/: __init__.py  server.py
api/models/: schemas.py
api/routes/: crud.py  preview.py
api/services/: file_store.py
config/: commitlint.config.js  postcss.config.js
docs/: docs-image-shopping-list.md  import-export-contract.md  widget-context-contract.md
docs/design-handoff/: audit-2026-04-27.md  ui-research-2026-04-27.md
docs/help/: WP_Context.md  WP_ContextInjector.md  WP_ContextLoop.md  WP_Debug.md  WP_PromptAssembler.md  WP_PromptCleaner.md  WP_VarToBool.md  WP_VarToFloat.md  WP_VarToInt.md  cascade-edit-contract.md
docs/release-notes/: next.md
engine/: __init__.py  _fingerprint.py  _utils.py  context.py  converters.py  exporter.py  handlers.py  importer.py  modules.py  pipeline.py  seed_derive.py  template.py
engine/cascade/: fixers.py  orchestrator.py  scan.py  undo.py
engine/cleaner/: __init__.py  pipeline.py  tokenize.py  types.py
engine/db/: __init__.py  config.py  connection.py  info.py  lazy_migrate.py  migrations.py  pending_move.py  repositories.py
engine/migrations/: __init__.py  v0_to_v1.py  v1_to_v2.py
engine/modules/: __init__.py  _constraint_math.py  _constraints.py  _keys.py  _seed.py  combine_handler.py  constraint_handler.py  derivation_handler.py  dispatcher.py  fixed_values_handler.py  pipeline_handler.py  snapshot.py  types.py  wildcard_handler.py
engine/schemas/: instance_schemas.py
engine/syntax/: __init__.py  resolve.py  subcat_filter.py  tokenize.py  types.py
locales/en/: main.json  nodeDefs.json  settings.json
nodes/: __init__.py  context_inject.py  pipeline_node.py  prompt_assembler.py  sources.py
public/images/: site.webmanifest
scripts/: bundle-size-diff.mjs  check-bundle-size.mjs  check-css-isolation.mjs  check-radius-tokens.mjs  check-spacing-tokens.mjs  check-typography-tokens.mjs  copy-help-docs.mjs  dump_engine_shapes.py  migrate_constraint_matrix_to_subcat.py  pack-release.mjs  seed_demo_bundle.py  seed_mock_data.py
src/: env.d.ts  main.ts  manager.html  manager.ts  test-setup.ts  types.ts
src/api/: client.ts  types.ts
src/assets/: main.css
src/extension/: _stashes.ts  about-badges.ts  collapse-connections.test.ts  collapse-connections.ts  conflicts.test.ts  conflicts.ts  constraint-pairs.test.ts  constraint-pairs.ts  cross-node-pairings.test.ts  cross-node-pairings.ts  fonts.ts  graph-events.ts  graph.test.ts  graph.ts  node-codename.test.ts  node-codename.ts  perf-stats.test.ts  perf-stats.ts  preview-resolver.ts  reactive.ts  settings.test.ts  settings.ts  subgraph-badge.ts  theme-detector.test.ts  theme-detector.ts  topbar.ts  widgets.ts
src/manager/: App.vue  main.ts
src/router/: index.ts
src/stores/: constraints.ts  drag.ts  pipelines.ts  wildcards.ts
src/theme/: preset.ts
src/typings/: comfyui.d.ts
src/validators/: index.ts
src/views/: ConstraintListView.vue  DashboardView.vue  PipelineListView.vue  WildcardListView.vue
src/widgets/: _seed-capture.ts  _shared.test.ts  _shared.ts  assembler.ts  bundle-gate.test.ts  cleaner.ts  clipboard-shield.test.ts  clipboard-shield.ts  context-pairing-equal.test.ts  context.ts  context_loop.ts  debug.ts  injector.test.ts  injector.ts  richTokenize.ts  seed_list.ts  shared.test.ts  var_picker.ts
tests/: test_api.py  test_cascade_subcat_edge_cases.py  test_constraint_cross_node.py  test_constraint_first_instance.py  test_constraint_integration.py  test_context.py  test_engine.py  test_engine_integration.py  test_engine_keys.py  test_extension.py  test_file_store.py  test_fix_subcat_cascade.py  test_handlers.py  test_instance_schema_parity.py  test_instance_schemas.py  test_migrate_chain.py  test_migrate_v1_to_v2.py  test_migration_016.py  test_module_interactions.py  test_modules.py  test_nodes_assembler.py  test_nodes_context.py  test_nodes_debug.py  test_nodes_integration.py  test_nodes_types.py  test_parser_parity.py  test_pipeline.py  test_pipeline_rewire.py  test_sanity.py  test_seed_derive.py  test_sequential_simulation.py  test_snapshot.py  test_sources.py  test_sp1_smoke.py  test_subcat_filter.py  test_subcat_filter_parity.py  test_template.py  test_tokenize_ref.py  test_user_chain_simulation.py  test_wildcard_null_option.py  (+2 more)
tests/cleaner/: test_blocklist.py  test_dangling_var.py  test_dedupe.py  test_null_slot.py  test_pipeline.py  test_punctuation.py  test_reorder.py  test_whitespace.py
tests/engine/: test_context_loop_execute.py  test_converters.py  test_exporter.py  test_fingerprint.py  test_hold_constraint_registration.py  test_importer.py  test_injector_handler.py  test_iteration_overrides.py  test_payload_migrations.py  test_seed_derive.py  test_seed_scope.py
tests/fixtures/: constraint-corpus.json  converter_cases.json  encode_key_js_outputs.json  seed-derive-corpus.json  subcat_filter_cases.json  syntax-corpus.json  syntax-corpus.schema.json
tests/stubs/: comfy_api_stub.py
web/: index.html
wp_api/: __init__.py  _helpers.py  _validators.py  bundles.py  cascade.py  categories.py  cleaner_presets.py  database.py  import_export.py  library_save.py  modules.py  preview.py  spa.py  templates.py  test_runner.py
wp_nodes/: __init__.py  assembler_node.py  context_loop.py  context_node.py  debug_node.py  injector_node.py  prompt_cleaner.py  seed_list.py  types.py  var_to_bool.py  var_to_float.py  var_to_int.py
(+923 files in other folders)
